<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.akproject.easybuy.ItemInputActivity"
    tools:showIn="@layout/activity_item_input">

    <LinearLayout
        android:id="@+id/first_linear"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout android:id="@+id/layout_rename"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText android:id="@+id/edit_attributeName"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/edit_attributeName"
                android:nextFocusLeft="@id/edit_attributeName"
                android:singleLine="true"
                android:hint="@string/field_category_name" />

            <Button android:id="@+id/rename_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:text="@string/action_rename"
                android:onClick="renameAttribute" />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:text="@string/action_remove"
                android:onClick="removeAttribute" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <EditText android:id="@+id/edit_itemName"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/edit_itemName"
                android:nextFocusLeft="@id/edit_itemName"
                android:singleLine="true"
                android:hint="@string/field_add_item_name" />

            <Button android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:text="@string/action_add"
                android:onClick="addItem" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_item">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</RelativeLayout>
