<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.akproject.easybuy.PaymentActivity"
    tools:showIn="@layout/activity_payment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_payment"
                style="@style/itemListHeader"/>

            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/field_cutoff_day"
                style="@style/itemListHeader"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_paymentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_payment">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
