<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.akproject.easybuy.BuyListActivity"
    tools:showIn="@layout/activity_buy_list">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_day"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Spinner
                android:id="@+id/spinner_payment"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkbox_cutoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/cutoff"
                android:onClick="triggerCutOff" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_guide"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/guide_input_transaction"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/list_buyList"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:id="@+id/txt_totalPrice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/txt_paidPrice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_buy_list">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</RelativeLayout>
